Refractor: исправить замечания ревьювера