@@ -16,7 +16,7 @@ public class InMemoryHistoryManager implements HistoryManager {
     public void add(Task task) {
         history.add(task);
         if (history.size() > maxHistorySize) {
-            history.remove(0);
+            history.removeFirst();
         }
     }
 
